--- a/project/report.bib
+++ b/project/report.bib
@@ -1,76 +1,86 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Fredrik Kjolstad at 2012-12-10 15:25:32 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@book{bishop2006pattern,
+	Author = {Bishop, C.M. and others},
+	Date-Added = {2012-12-10 20:25:22 +0000},
+	Date-Modified = {2012-12-10 20:25:22 +0000},
+	Number = {4},
+	Publisher = {springer New York},
+	Title = {Pattern recognition and machine learning},
+	Volume = {4},
+	Year = {2006}}
+
 @inproceedings{featurehash,
-  title={Feature hashing for large scale multitask learning},
-  author={Weinberger, K. and Dasgupta, A. and Langford, J. and Smola, A. and Attenberg, J.},
-  booktitle={Proceedings of the 26th Annual International Conference on Machine Learning},
-  pages={1113--1120},
-  year={2009},
-  organization={ACM}
-}
+	Author = {Weinberger, K. and Dasgupta, A. and Langford, J. and Smola, A. and Attenberg, J.},
+	Booktitle = {Proceedings of the 26th Annual International Conference on Machine Learning},
+	Organization = {ACM},
+	Pages = {1113--1120},
+	Title = {Feature hashing for large scale multitask learning},
+	Year = {2009}}
 
 @article{twitter,
-  title={Twitter mood predicts the stock market},
-  author={Bollen, J. and Mao, H. and Zeng, X.},
-  journal={Journal of Computational Science},
-  volume={2},
-  number={1},
-  pages={1--8},
-  year={2011},
-  publisher={Elsevier}
-}
+	Author = {Bollen, J. and Mao, H. and Zeng, X.},
+	Journal = {Journal of Computational Science},
+	Number = {1},
+	Pages = {1--8},
+	Publisher = {Elsevier},
+	Title = {Twitter mood predicts the stock market},
+	Volume = {2},
+	Year = {2011}}
 
 @article{mlstockmarket,
-  title={Machine Learning Techniques for Stock Prediction},
-  author={Shah, V.H.},
-  journal={Courant Institute of Mathematical Science, New York University},
-  year={2007},
-  note = "\url{http://www.vatsals.com/Essays/MachineLearningTechniquesforStockPrediction.pdf}"
-}
+	Author = {Shah, V.H.},
+	Journal = {Courant Institute of Mathematical Science, New York University},
+	Note = {\url{http://www.vatsals.com/Essays/MachineLearningTechniquesforStockPrediction.pdf}},
+	Title = {Machine Learning Techniques for Stock Prediction},
+	Year = {2007}}
 
 @other{spam,
-
-	note="\url{http://en.wikipedia.org/wiki/Bayesian_spam_filtering}"
-}
+	Note = {\url{http://en.wikipedia.org/wiki/Bayesian_spam_filtering}}}
 
 @other{techindicator,
-	note="\url{http://www.investopedia.com/articles/trading/11/using-multiple-indicators-to-predict-market-fluxuations.asp}"
-}
+	Note = {\url{http://www.investopedia.com/articles/trading/11/using-multiple-indicators-to-predict-market-fluxuations.asp}}}
 
 @article{techdim,
-  title={Dimension reduction of technical indicators for the prediction of financial time series-Application to the BEL20 Market Index},
-  author={WERTZ, V. and VERLEYSEN, M.},
-  journal={European Journal of Economic and Social Systems},
-  volume={15},
-  number={2},
-  pages={31--48},
-  year={2001}
-}
+	Author = {WERTZ, V. and VERLEYSEN, M.},
+	Journal = {European Journal of Economic and Social Systems},
+	Number = {2},
+	Pages = {31--48},
+	Title = {Dimension reduction of technical indicators for the prediction of financial time series-Application to the BEL20 Market Index},
+	Volume = {15},
+	Year = {2001}}
 
 @article{lsi,
-  title={Indexing by latent semantic analysis},
-  author={Deerwester, S. and Dumais, S.T. and Furnas, G.W. and Landauer, T.K. and Harshman, R.},
-  journal={Journal of the American society for information science},
-  volume={41},
-  number={6},
-  pages={391--407},
-  year={1990}
-}
+	Author = {Deerwester, S. and Dumais, S.T. and Furnas, G.W. and Landauer, T.K. and Harshman, R.},
+	Journal = {Journal of the American society for information science},
+	Number = {6},
+	Pages = {391--407},
+	Title = {Indexing by latent semantic analysis},
+	Volume = {41},
+	Year = {1990}}
 
 @inproceedings{plsi,
-  title={Probabilistic latent semantic indexing},
-  author={Hofmann, T.},
-  booktitle={Proceedings of the 22nd annual international ACM SIGIR conference on Research and development in information retrieval},
-  pages={50--57},
-  year={1999},
-  organization={ACM}
-}
+	Author = {Hofmann, T.},
+	Booktitle = {Proceedings of the 22nd annual international ACM SIGIR conference on Research and development in information retrieval},
+	Organization = {ACM},
+	Pages = {50--57},
+	Title = {Probabilistic latent semantic indexing},
+	Year = {1999}}
 
 @article{lda,
-  title={Latent dirichlet allocation},
-  author={Blei, D.M. and Ng, A.Y. and Jordan, M.I.},
-  journal={the Journal of machine Learning research},
-  volume={3},
-  pages={993--1022},
-  year={2003},
-  publisher={JMLR. org}
-}
-
+	Author = {Blei, D.M. and Ng, A.Y. and Jordan, M.I.},
+	Journal = {the Journal of machine Learning research},
+	Pages = {993--1022},
+	Publisher = {JMLR. org},
+	Title = {Latent dirichlet allocation},
+	Volume = {3},
+	Year = {2003}}
