--- a/project/report.tex
+++ b/project/report.tex
@@ -216,7 +216,7 @@ In this section we describe the different classifiers we developed for this proj
 For each classifiers we describe our implementation choices and what, if any, third-party libraries we used.
 We implemented all of our classifiers as MATLAB functions.
 
-Our classifiers can roughly be divided into four categories. The first are simple prediction rules. These are mostly included to demonstrate features of our data and to serve as baselines for the other classifiers. The next class include classifiers that do not have a probabilistic model. These include AdaBoost, Nearest Neighbor and SVM. The third class consist of classifiers based on probabilistic models. The only classifiers we implemented in this category is Naive Bayes. The fourth and final class of classifiers is sequential models and include M-order Markov Models, Hidden Markov Models, and a combination of Hidden Markov Models and Naive Bayes.
+Our classifiers can roughly be divided into four categories. The first are simple prediction rules. These are mostly included to demonstrate features of our data and to serve as baselines for the other classifiers. The next class include classifiers that do not have a probabilistic model. These include AdaBoost, Nearest Neighbor and SVM~\cite{bishop2006pattern}. The third class consist of classifiers based on probabilistic models. The only classifiers we implemented in this category is Naive Bayes. The fourth and final class of classifiers is sequential models and include M-order Markov Models, Hidden Markov Models, and a combination of Hidden Markov Models and Naive Bayes.
 
 \subsection{Naive Bayes}
 \label{sec:naive-bayes}
