--- a/project/report.tex
+++ b/project/report.tex
@@ -69,9 +69,9 @@ The contributions of this paper are:
 
 Predicting stocks is a very attractive topic for many people due to the possibility of making a profit, and due to this there is an abundance of previous work.
 
-There are two hypotheses about markets which imply that prediction is difficult~\cite{mlstockmarket}. The first is the Random Walk Hypothesis, which
+There are hypothesis about markets which imply that prediction is difficult or impossible~\cite{mlstockmarket}. The main one is the Random Walk Hypothesis, which states that stock prices do not depend on previous results (essentially the movement of prices overtime is a ``random walk'' moving up or down). Obviously under this assumption predicting stocks is impossible, but this assumption turns out to be an oversimplification of the market. The Efficient Market Hypothesis is similar, stating that future stock prices cannot be predicted by the past trading history, due to prices being influenced by information efficiently. Again, this assumption can make prediction impossible, but in analyzing newspaper articles for stock predictions we can possibly find some latent influences that the market did not yet incorporate.
 
-The most common technique seems to be predicting the market through the use of technical indicators such as Simple Moving Averages, which is the technique recommended by several investing sites including~\cite{techindicator}. This is known as technical analysis, which differs from fundamental analysis in that the latter is concerned with making expert decisions based in information about specific companies~\cite{mlstockmarket}. Dimensionality reduction techniques such as Principle Components Analysis (similar to Latent Semantic Indexing~\cite{lsi}, which we use) have been applied to these indicators to come up with predictors in the past~\cite{techdim}. Prediction based on machine learning techniques are also quite common, including other works that use newspaper articles to predict specific stocks~\cite{mlstockmarket}. We focus on using newspapers to predict the behavior of the market as a whole. Correlations between other textual data and the market have been exploited in the past, including using Twitter trends to predict the stock market~\cite{twitter}.
+The most common technique seems to be predicting the market through the use of technical indicators such as Simple Moving Averages, which is the technique recommended by several investing sites including~\cite{techindicator}. This is known as technical analysis, which differs from fundamental analysis in that the latter is concerned with making expert decisions based in information about specific companies~\cite{mlstockmarket} rather than predicting trends directly. Dimensionality reduction techniques such as Principle Components Analysis (similar to Latent Semantic Indexing~\cite{lsi}, which we use) have been applied to these indicators to come up with predictors in the past~\cite{techdim}. Prediction based on machine learning techniques are also quite common, including other works that use newspaper articles to predict specific stocks~\cite{mlstockmarket}. We focus on using newspapers to predict the behavior of the market as a whole. Correlations between other textual data and the market have been exploited in the past, including using Twitter trends to predict the stock market~\cite{twitter}.
 
 % Add the following paragraphs:
 % - Prior work on stock market preditictions
