--- a/project/report.tex
+++ b/project/report.tex
@@ -54,9 +54,9 @@ Others still, such as Markov Models and Hidden Markov Models are sequential and 
 
 The contributions of this paper are:
 \begin{description}
-\item[Feature Modeling] ... \TODO{Chris add this}
+\item[Feature Modeling] Several different methods for feature extraction from Wall Street Journal articles.
 \item[Classifiers] A suite of six different classifiers that work on bag of words, reduced features or temporal data.
-\item[Evaluation] An evaluation of the six classifiers, and one combination of two classifiers, on DJ performance and WSJ articles from 2007.
+\item[Evaluation] An evaluation of the six classifiers, using several feature modeling techniques, and one combination of two classifiers, on DJ performance and WSJ articles from 2007.
 \end{description}
 
 \begin{figure}
